[REFACTOR] 코드 품질 개선 및 최적화
주요 변경사항:
- TODO 주석 정리 (13개 항목)
- Hardcoded 값을 상수로 추출 (Bearer, 익명)
- Collectors.toList() → .toList() 최적화 적용
- 예외 처리 cause chain 전달 개선
- URL 검증 정규표현식 구현
- edge case 테스트 추가 (CalendarValidator, AuthorizationScheme)