@@ -5,7 +5,6 @@ import com.blackcompany.eeos.member.application.dto.QueryMembersResponse;
 import com.blackcompany.eeos.member.application.model.MemberModel;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -21,7 +20,7 @@ public class QueryMemberResponseConverter {
 
 	public QueryMembersResponse from(List<MemberModel> sources) {
 		return QueryMembersResponse.builder()
-				.members(sources.stream().map(this::from).collect(Collectors.toList()))
+				.members(sources.stream().map(this::from).toList())
 				.build();
 	}
 }
