@@ -4,7 +4,6 @@ import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.validation.constraints.NotNull;
 import java.sql.Timestamp;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -34,6 +33,6 @@ public class CreateProgramRequest implements CommandProgramRequest {
 
 	@JsonIgnore
 	public List<Long> getTeamIds() {
-		return this.teams.stream().map(t -> t.getTeamId()).collect(Collectors.toList());
+		return this.teams.stream().map(Team::getTeamId).toList();
 	}
 }
